<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation_graph"
            app:startDestination="@id/usersFragment">

    <fragment android:id="@+id/usersFragment"
              android:name="com.juangm.randomusers.presentation.ui.users.UsersFragment"
              android:label="@string/fragment_users_title"
              tools:layout="@layout/fragment_users">

        <action android:id="@+id/action_usersFragment_to_userDetailFragment"
                app:destination="@id/userDetailFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

        <action android:id="@+id/action_usersFragment_to_favoriteUsersFragment"
                app:destination="@id/favoriteUsersFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>

    <fragment android:id="@+id/userDetailFragment"
              android:name="com.juangm.randomusers.presentation.ui.userdetail.UserDetailFragment"
              android:label="@string/fragment_user_detail_title"
              tools:layout="@layout/fragment_user_detail">

        <argument
                android:name="user"
                app:argType="com.juangm.randomusers.domain.models.User"/>

        <argument
                android:name="position"
                app:argType="integer"/>

    </fragment>

    <fragment android:id="@+id/settingsFragment"
              android:name="com.juangm.randomusers.presentation.ui.settings.SettingsFragment"
              android:label="@string/fragment_settings"
              tools:layout="@layout/fragment_settings"/>

    <fragment android:id="@+id/favoriteUsersFragment"
              android:name="com.juangm.randomusers.presentation.ui.favorites.FavoriteUsersFragment"
              android:label="@string/fragment_favorite_users_title"
              tools:layout="@layout/fragment_favorite_users">

        <action android:id="@+id/action_favoriteUsersFragment_to_userDetailFragment"
                app:destination="@id/userDetailFragment"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>
</navigation>